--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "less": "^3.13.1",
     "less-loader": "^5.0.0",
     "nprogress": "^0.2.0",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
