--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "swiper": "^5.4.5",
+    "uuid": "^9.0.1",
     "vue": "^2.6.10",
     "vuex": "^3.6.2"
   },
