--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "babel-plugin-component": "^1.1.1",
     "core-js": "^2.6.5",
+    "element-ui": "^2.15.14",
     "less": "^3.13.1",
     "less-loader": "^5.0.0",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "qrcode": "^1.5.3",
     "swiper": "^5.4.5",
     "uuid": "^9.0.1",
     "vue": "^2.6.10",
