--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "swiper": "^5.4.5",
     "uuid": "^9.0.1",
     "vue": "^2.6.10",
+    "vue-lazyload": "^1.3.5",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
