--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "qrcode": "^1.5.3",
     "swiper": "^5.4.5",
     "uuid": "^9.0.1",
+    "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
     "vue-lazyload": "^1.3.5",
     "vuex": "^3.6.2"
